--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -170,7 +170,7 @@ This rewarding system is inherently built into human beings that motivate us to 
 
 <div class="row">
     <div class="col-md-7">
-      <p style="text-align:justify"> <b>NeurIPS "Learning to run" challenge:</b> Over the past two years NeurIPS, [formerly known as NIPS] has been hosting the online "Learning to run" challenge, where the contestents have to train a musculoskeletal model in Opensim simulation environment to run at a particular speed and avoid obstacles at the same time.[<a href="https://www.crowdai.org/challenges/nips-2018-ai-for-prosthetics-challenge" class="md-link">NeurIPS, 2018 challenge</a>][<a href="https://github.com/stanfordnmbl/osim-rl" class="md-link">repository</a>]</p> 
+      <p style="text-align:justify"> <b>[1] NeurIPS "Learning to run" challenge:</b> Over the past two years NeurIPS, [formerly known as NIPS] has been hosting the online "Learning to run" challenge, where the contestents have to train a musculoskeletal model in Opensim simulation environment to run at a particular speed and avoid obstacles at the same time.[<a href="https://www.crowdai.org/challenges/nips-2018-ai-for-prosthetics-challenge" class="md-link">NeurIPS, 2018 challenge</a>][<a href="https://github.com/stanfordnmbl/osim-rl" class="md-link">repository</a>]</p> 
     </div>
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/NIPS.gif"/>
