--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -19,7 +19,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <div class="row">
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/human_inputs.png"/>
-      <figcaption><font size="0.5">Human walking outputs.</font></figcaption>
+      <figcaption><font size="0.5">Fig.1 Human walking outputs.</font></figcaption>
   </div>
   <div class="col-md-7">
         <p style="text-align:justify">
@@ -35,7 +35,7 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 <div class="col-md-5">
 <img class="center" src="{{ site.github.url }}/media/blog/matsuoka_cpg.png"/>
-<figcaption><font size="0.5">Half-center oscillator model of CPG.</font></figcaption>
+<figcaption><font size="0.5">Fig.2 Half-center oscillator model of CPG.</font></figcaption>
 </div>
 </div>
 
@@ -53,7 +53,7 @@ This rewarding system is inherently built into human beings that motivate us to 
                 </a>
                 <center>
                 <p class="image-caption" style="font-size:10px; text-align:center;">
-                    Agent-environment interaction in RL setting.
+                    Fig.3 Agent-environment interaction in RL setting.
                 </p>
                 </center>
             </div>
@@ -69,7 +69,7 @@ This rewarding system is inherently built into human beings that motivate us to 
                 </a>
                 <center>
                 <p class="image-caption" style="font-size:10px; text-align:center;">
-                    Actor-Critic network model.
+                    Fig.4 Actor-Critic network model.
                 </p>
                 </center>
             </div>
@@ -87,7 +87,7 @@ This rewarding system is inherently built into human beings that motivate us to 
 </div>
 <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/biped_training.gif"/>
-      <figcaption><font size="0.5">Initial learning phase.</font></figcaption>
+      <figcaption><font size="0.5">Fig.5 Initial learning phase.</font></figcaption>
   </div>
 </div>
 
@@ -103,12 +103,12 @@ This rewarding system is inherently built into human beings that motivate us to 
     </div>
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/biped_trained.gif"/>
-      <figcaption><font size="0.5">The DDPG trained model - stable walking.</font></figcaption>
+      <figcaption><font size="0.5">Fig.6 The DDPG trained model - stable walking.</font></figcaption>
   </div>
   <br>
   <div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/motive2.gif"/>
-      <figcaption><font size="0.5">Motion capture recording of a human walking gait.</font></figcaption>
+      <figcaption><font size="0.5">Fig.7 Motion capture recording of a human walking gait.</font></figcaption>
   </div>
 </div>
 
@@ -116,13 +116,13 @@ This rewarding system is inherently built into human beings that motivate us to 
   <div class="col-md-6">
       <img class="rimg" src="{{ site.github.url }}/media/blog/biped_hip.png"/>
       <p class="image-caption" style="font-size:10px; text-align: center;">
-                    Hip joint rotation trajectory for biped robot.
+                    Fig.8 Hip joint rotation trajectory for biped robot.
       </p>
   </div>
   <div class="col-md-6">
       <img class="limg" src="{{ site.github.url }}/media/blog/human_hip.png"/>
       <p class="image-caption" style="font-size:10px; text-align: center;">
-                    Hip joint rotation trajectory for human walking.
+                    Fig.9 Hip joint rotation trajectory for human walking.
       </p>
   </div>
 </div>
@@ -131,13 +131,13 @@ This rewarding system is inherently built into human beings that motivate us to 
   <div class="col-md-6">
       <img class="rimg" src="{{ site.github.url }}/media/blog/biped_knee.png"/>
       <p class="image-caption" style="font-size:10px; text-align: center;">
-                    Knee joint rotation trajectory for biped robot.
+                    Fig.10 Knee joint rotation trajectory for biped robot.
       </p>
   </div>
   <div class="col-md-6">
       <img class="limg" src="{{ site.github.url }}/media/blog/human_knee.png"/>
       <p class="image-caption" style="font-size:10px; text-align: center;">
-                    Hip joint rotation trajectory for human walking.
+                    Fig.11 Hip joint rotation trajectory for human walking.
       </p>
   </div>
 </div>
