--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -25,7 +25,9 @@ This post mainly focuses on the implementation of RL and imitation learning tech
  </div>
 
   <div class="col-md-4">
-      <img class="rimg" src="{{ site.github.url }}/media/blog/openaigym/breakout-v0.gif"/>
+  	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/breakout-v0.gif" title="DQN">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/breakout-v0.gif" alt="DQN" style="border:2px solid black;" align="middle">
+    </a>
   </div>
   
 </div>
