--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -26,17 +26,17 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 
   <div class="col-md-3">
   	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/breakout-v0.gif" title="breakout">
-    <img src="https://nav74neet.github.io/media/blog/openaigym/breakout-v0.gif" alt="breakout" style="border:1px solid black;" align="middle">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/breakout-v0.gif" alt="breakout">
     </a>
   </div>
   
 </div>
 
----
+
 <div class="row">
  <div class="col-md-9">
         <p style="text-align:justify">
-          <b>[1] DQN & Policy Gradient for CartPole-v1</b>: A pole is attached by an un-actuated joint to a cart, which moves along a frictionless track. The system is controlled by applying a force of +1 or -1 to the cart. The pendulum starts upright, and the goal is to prevent it from falling over. A reward of +1 is provided for every timestep that the pole remains upright. The episode ends when the pole is more than 15 degrees from vertical, or the cart moves more than 2.4 units from the center. 
+          <b>[2] DQN & Policy Gradient for CartPole-v1</b>: A pole is attached by an un-actuated joint to a cart, which moves along a frictionless track. The system is controlled by applying a force of +1 or -1 to the cart. The pendulum starts upright, and the goal is to prevent it from falling over. A reward of +1 is provided for every timestep that the pole remains upright. The episode ends when the pole is more than 15 degrees from vertical, or the cart moves more than 2.4 units from the center. 
           </p>
           <p>
           <a href="https://github.com/nav74neet/rl_gym/tree/master/cartpole" class="md-link btn-default btn rbtn">Code</a>
@@ -45,10 +45,28 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 
   <div class="col-md-3">
   	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/cartpole.gif" title="cart">
-    <img src="https://nav74neet.github.io/media/blog/openaigym/cartpole.gif" alt="cart" style="border:1px solid black;" align="middle">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/cartpole.gif" alt="cart">
     </a>
   </div>
   
 </div>
 
----
+
+<div class="row">
+ <div class="col-md-9">
+        <p style="text-align:justify">
+          <b>[3] Policy Gradient for custom CartPole model in Gazebo</b>: Policy gradient method based on actor-critic learning framework is implemented over the custom cartpole environment in gazebo simulation environment. 
+          </p>
+          <p>
+          <a href="https://github.com/nav74neet/rl_gym/tree/master/cartpole_gazebo" class="md-link btn-default btn rbtn">Code</a>
+        </p>
+ </div>
+
+  <div class="col-md-3">
+  	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/cartpole-pg-gazebo.gif" title="gazebo">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/cartpole-pg-gazebo.gif" alt="gazebo">
+    </a>
+  </div>
+  
+</div>
+
