--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -32,11 +32,12 @@ This post mainly focuses on the implementation of RL and imitation learning tech
   
 </div>
 
+---
 
 <div class="row">
  <div class="col-md-9">
         <p style="text-align:justify">
-          <b>[2] DQN & Policy Gradient for CartPole-v1</b>: A pole is attached by an un-actuated joint to a cart, which moves along a frictionless track. The system is controlled by applying a force of +1 or -1 to the cart. The pendulum starts upright, and the goal is to prevent it from falling over. A reward of +1 is provided for every timestep that the pole remains upright. The episode ends when the pole is more than 15 degrees from vertical, or the cart moves more than 2.4 units from the center. 
+          <b>[2] DQN & Policy Gradient for CartPole-v1</b>: A pole is attached by an under-actuated joint to a cart, which moves along a frictionless track. The system is controlled by applying a force of +1 or -1 to the cart. The pendulum starts upright, and the goal is to prevent it from falling over. A reward of +1 is provided for every timestep that the pole remains upright. The episode ends when the pole is more than 15 degrees from vertical, or the cart moves more than 2.4 units from the center. 
           </p>
           <p>
           <a href="https://github.com/nav74neet/rl_gym/tree/master/cartpole" class="md-link btn-default btn rbtn">Code</a>
@@ -51,6 +52,7 @@ This post mainly focuses on the implementation of RL and imitation learning tech
   
 </div>
 
+---
 
 <div class="row">
  <div class="col-md-9">
@@ -63,10 +65,31 @@ This post mainly focuses on the implementation of RL and imitation learning tech
  </div>
 
   <div class="col-md-3">
-  	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/cartpole-pg-gazebo.gif" title="gazebo">
-    <img src="https://nav74neet.github.io/media/blog/openaigym/cartpole-pg-gazebo.gif" alt="gazebo">
+  	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/pg2.gif" title="gazebo">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/pg2.gif" alt="gazebo">
     </a>
   </div>
   
 </div>
 
+---
+
+<div class="row">
+ <div class="col-md-9">
+        <p style="text-align:justify">
+          <b>[3] DQN & Policy Gradient for MountainCar-v0</b>: A car is on a one-dimensional track, positioned between two "mountains". The goal is to drive up the mountain on the right; however, the car's engine is not strong enough to scale the mountain in a single pass. Therefore, the only way to succeed is to drive back and forth to build up momentum.
+          </p>
+          <p>
+          <a href="https://github.com/nav74neet/rl_gym/tree/master/mountaincar" class="md-link btn-default btn rbtn">Code</a>
+        </p>
+ </div>
+
+  <div class="col-md-3">
+  	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/mountain-car-v0.gif" title="car">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/mountain-car-v0.gif" alt="car">
+    </a>
+  </div>
+  
+</div>
+
+---
