--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -13,7 +13,7 @@ tags: reinforcement learning, dqn, policy gradient, gail, ppo, openai gym, cartp
 This post mainly focuses on the implementation of RL and imitation learning techniques for classical OpenAI gym' environments like cartpole-v0, breakout, mountain car, bipedwalker-v2, etc. I have implemented several RL algorithms such as dqn, policy gradient, etc. as well as generative adversaral learning approach like GAIL for imitation learning.      
 </p>
 
-## Reinforcment learning Techniques.
+## Reinforcment learning techniques.
 <div class="row">
  <div class="col-md-9">
         <p style="text-align:justify">
@@ -87,6 +87,55 @@ This post mainly focuses on the implementation of RL and imitation learning tech
   <div class="col-md-3">
   	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/mountain-car-v0.gif" title="car">
     <img src="https://nav74neet.github.io/media/blog/openaigym/mountain-car-v0.gif" alt="car">
+    </a>
+  </div>
+  
+</div>
+
+---
+
+## Imitation learning techniques.
+<div class="row">
+ <div class="col-md-9">
+        <p style="text-align:justify">
+          <b>[1] GAIL for cartpole-v0 </b>: A TensorFlow implementation of Generatve Adversarial Imitation Learning (GAIL) and Behavioural Cloning (BC) for classic cartpole-v0 environment from OpenAI Gym. The expert policies are generated using Proximal Policy Optimization (PPO). 
+          <ul>
+	 		<li><b>State space:</b>Continuos</li>
+  			<li><b>Action Space:</b>Discrete</li>
+  		  </ul> 
+        </p>
+        <p>
+          <a href="https://github.com/nav74neet/gail_gym/tree/master/gail-ppo-tf-gym" class="md-link btn-default btn rbtn">Code</a>
+        </p>
+ </div>
+
+  <div class="col-md-3">
+  	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/test_gail.gif" title="gail">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/test_gail.gif" alt="gail">
+    </a>
+  </div>
+  
+</div>
+
+---
+
+<div class="row">
+ <div class="col-md-9">
+        <p style="text-align:justify">
+          <b>[1] GAIL for bipedwalker-v2</b>: Pytorch implementation of Generatve Adversarial Imitation Learning (GAIL) for bipedwalker-v2 environment from OpenAI Gym. The expert policies are generated using Proximal Policy Optimization (PPO). 
+          <ul>
+	 		<li><b>State space: (Continuos)</b>(1) hull angle, (2) angular velocity, (3) horizontal speed, (4) vertical speed, (5) position of joints (6) joints angular speed, (7) legs contact with ground, and (8) lidar rangefinder measurements</li>
+  			<li><b>Action Space:(Continuos)</b>joint motor torques</li>
+  		  </ul> 
+        </p>
+        <p>
+          <a href="https://github.com/nav74neet/gail_gym/tree/master/gail-ppo-pytorch-gym" class="md-link btn-default btn rbtn">Code</a>
+        </p>
+ </div>
+
+  <div class="col-md-3">
+  	<a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/gail.gif" title="gail2">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/gail.gif" alt="gail2">
     </a>
   </div>
   
