--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title:  "Solving OpenAI gym's environments using reinforcement and imitation learning techniques"
-date:   2018-06-06
+date:   2018-04-03
 categories: [rl]
-description: My solutions to tackle several OpenAI gym's environments using RL and imitation learning.
+description: My solutions to tackle a few of OpenAI gym's environments using RL and imitation learning.
 tags: reinforcement learning, dqn, policy gradient, gail, ppo, openai gym, cartpole, bipedwalker, gazebo, breakout, tensorflow, pytorch, 
 
 ---
