--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -12,6 +12,13 @@ tags: reinforcement learning, dqn, policy gradient, gail, ppo, openai gym, cartp
 <p style="text-align:justify">
 This post mainly focuses on the implementation of RL and imitation learning techniques for classical OpenAI gym' environments like cartpole-v0, breakout, mountain car, bipedwalker-v2, etc. I have implemented several RL algorithms such as dqn, policy gradient, etc. as well as generative adversaral learning approach like GAIL for imitation learning.      
 </p>
+<p>
+<div class="image-wrapper">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/openaigym/openai.jpg" title="openai">
+                    <img src="https://nav74neet.github.io/media/openaigym/openai.jpg" alt="openai" align="middle">
+                </a>
+</div>
+</p>
 
 ## Reinforcment learning techniques.
 <div class="row">
