--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -14,8 +14,8 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 </p>
 <p>
 <div class="image-wrapper">
-                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/openaigym.png" title="openai">
-                    <img src="https://nav74neet.github.io/media/blog/openaigym/openaigym.png" alt="openai" align="middle">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/openaigym.jpg" title="openai">
+                    <img src="https://nav74neet.github.io/media/blog/openaigym/openaigym.jpg" alt="openai" align="middle">
                 </a>
 </div>
 </p>
