--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -18,14 +18,14 @@ tags: reinforcement learning, dqn, policy gradient, gail, ppo, openai gym, cartp
 <br>
 
 ## What's this post about?
-<p style="text-align:justify">
+<p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
 This post mainly focuses on the implementation of RL and imitation learning techniques for classical OpenAI gym' environments like cartpole-v0, breakout, mountain car, bipedwalker-v2, etc. I have implemented several RL algorithms such as dqn, policy gradient, etc. as well as generative adversaral learning approach like GAIL for imitation learning.      
 </p>
 
 ## Reinforcment learning techniques.
 <div class="row">
  <div class="col-md-9">
-        <p style="text-align:justify">
+        <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
           <b>[1] Deep Q-Networks for Breakout-v0</b>: Maximize the score in the Atari 2600 game Breakout. In this environment, the observation is an RGB image of the screen, which is an array of shape (210, 160, 3) Each action is repeatedly performed for a duration of kkk frames, where kkk is uniformly sampled from {2,3,4}. 
           </p>
           <p>
@@ -45,7 +45,7 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 
 <div class="row">
  <div class="col-md-9">
-        <p style="text-align:justify">
+        <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
           <b>[2] DQN & Policy Gradient for CartPole-v1</b>: A pole is attached by an under-actuated joint to a cart, which moves along a frictionless track. The system is controlled by applying a force of +1 or -1 to the cart. The pendulum starts upright, and the goal is to prevent it from falling over. A reward of +1 is provided for every timestep that the pole remains upright. The episode ends when the pole is more than 15 degrees from vertical, or the cart moves more than 2.4 units from the center. 
           </p>
           <p>
@@ -65,7 +65,7 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 
 <div class="row">
  <div class="col-md-9">
-        <p style="text-align:justify">
+        <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
           <b>[3] Policy Gradient for custom CartPole model in Gazebo</b>: Policy gradient method based on actor-critic learning framework is implemented over the custom cartpole environment in gazebo simulation environment. 
           </p>
           <p>
@@ -85,7 +85,7 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 
 <div class="row">
  <div class="col-md-9">
-        <p style="text-align:justify">
+        <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
           <b>[3] DQN & Policy Gradient for MountainCar-v0</b>: A car is on a one-dimensional track, positioned between two "mountains". The goal is to drive up the mountain on the right; however, the car's engine is not strong enough to scale the mountain in a single pass. Therefore, the only way to succeed is to drive back and forth to build up momentum.
           </p>
           <p>
@@ -106,7 +106,7 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 ## Imitation learning techniques.
 <div class="row">
  <div class="col-md-9">
-        <p style="text-align:justify">
+        <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
           <b>[1] GAIL for cartpole-v0 </b>: A TensorFlow implementation of Generatve Adversarial Imitation Learning (GAIL) and Behavioural Cloning (BC) for classic cartpole-v0 environment from OpenAI Gym. The expert policies are generated using Proximal Policy Optimization (PPO). 
           <ul>
 	 		<li><b>State space:</b>Continuos</li>
@@ -130,7 +130,7 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 
 <div class="row">
  <div class="col-md-8">
-        <p style="text-align:justify">
+        <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
           <b>[2] GAIL for bipedwalker-v2</b>: Pytorch implementation of Generatve Adversarial Imitation Learning (GAIL) for bipedwalker-v2 environment from OpenAI Gym. The expert policies are generated using Proximal Policy Optimization (PPO). 
           <ul>
 	 		<li><b>State space:(Continuos) </b>(1) hull angle, (2) angular velocity, (3) horizontal speed, (4) vertical speed, (5) position of joints (6) joints angular speed, (7) legs contact with ground, and (8) lidar rangefinder measurements</li>
