--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -40,11 +40,11 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </div>
 
 ## Reinforcement learning approach.
-<p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">Humans rely on learning from interaction, repeated trial and errors with small variations  and  finding out what works and what not. Let’s consider an example of a child learning to walk. It tries out various possible movements. It may take several days before it stands stably on its feet let alone walking. In the process of learning to walk, the child is punished by falling and rewarded for moving forward. 
+<p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">Humans rely on learning from interaction, repeated trial and errors with small variations  and  finding out what works and what not. Let’s consider an example of a child learning to walk. It tries out various possible movements. It may take several days before it stands stably on its feet let alone walking. In the process of learning to walk, the child is punished by falling and rewarded for moving forward.</p> 
 	<div class="col-md-5">
       <img class="rimg" src="{{ site.github.url }}/media/blog/baby.gif"/>
 	</div>
-This rewarding system is inherently built into human beings that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This kind of reward based learning has been modelled mathematically and is called <b>Reinforcement learning</b>. A typical reinforcement learning setting consists of an agent interacting with the environment <b><i>E</i></b>. After each time step <b><i>t</i></b>, the agent receives an observation <b><i>s<sub>t</sub></i></b> from the environment and takes action <b><i>a<sub>t</sub></i></b> for which it recieves a scalar reward <b><i>r<sub>t</sub></i></b> & next state <b><i>s<sub>t+1</sub></i></b> as seen in figure below.
+<p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">This rewarding system is inherently built into human beings that motivate us to do actions that garner positive rewards (e.g.,happiness) and discourage the actions that account for bad rewards(e.g.,falling, getting hurt, pain, etc.). This kind of reward based learning has been modelled mathematically and is called <b>Reinforcement learning</b>. A typical reinforcement learning setting consists of an agent interacting with the environment <b><i>E</i></b>. After each time step <b><i>t</i></b>, the agent receives an observation <b><i>s<sub>t</sub></i></b> from the environment and takes action <b><i>a<sub>t</sub></i></b> for which it recieves a scalar reward <b><i>r<sub>t</sub></i></b> & next state <b><i>s<sub>t+1</sub></i></b> as seen in figure below.
 </p>
 <center>
             <div class="image-wrapper">
