--- a/_posts/2018-12-20-ai4d.md
+++ b/_posts/2018-12-20-ai4d.md
@@ -1,13 +1,13 @@
 ---
-
 layout: post
-title:  "When AI learnt to dress!"
+title:  "When AI learnt to dress"
 date:   2018-12-20
 categories: [rl]
 description: Learning to Dress: Synthesizing Human Dressing Motion via Deep Reinforcement Learning.
 tags: deep reinforcement learning, character animation, nueral networks,
 
 ---
+
 
 ## Intro  
 <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">Recently, one of the exciting works, to come out of Siggraph, 2018 and grab the attention for many machine learning researchers world-wide, is "<a href="https://www.cc.gatech.edu/~aclegg3/projects/learning-dress-synthesizing.pdf" class="md-link">Learning to Dress: Synthesizing Human Dressing Motion via Deep Reinforcement Learning</a>".
