--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -46,7 +46,7 @@ This post mainly focuses on the implementation of RL and imitation learning tech
 <div class="row">
  <div class="col-md-9">
         <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
-          <b>[2] DQN & Policy Gradient for CartPole-v1</b>: A pole is attached by an under-actuated joint to a cart, which moves along a frictionless track. The system is controlled by applying a force of +1 or -1 to the cart. The pendulum starts upright, and the goal is to prevent it from falling over. A reward of +1 is provided for every timestep that the pole remains upright. The episode ends when the pole is more than 15 degrees from vertical, or the cart moves more than 2.4 units from the center. 
+          <b>[2] DQN & Policy Gradient for CartPole-v1</b>: Cartpole - known also as an Inverted Pendulum is a pendulum with a center of gravity above its pivot point. It’s unstable, but can be controlled by moving the pivot point under the center of mass. The goal is to keep the cartpole balanced by applying appropriate forces to a pivot point. A reward of +1 is provided for every timestep that the pole remains upright. The episode ends when the pole is more than 15 degrees from vertical, or the cart moves more than 2.4 units from the center. 
           </p>
           <p>
           <a href="https://github.com/nav74neet/rl_gym/tree/master/cartpole" class="md-link btn-default btn rbtn">Code</a>
