Added dqn for lunarlander-v2

--- a/_posts/2018-06-06-openai.md
+++ b/_posts/2018-06-06-openai.md
@@ -101,6 +101,27 @@ This post mainly focuses on the implementation of RL and imitation learning tech
   
 </div>
 
+
+
+<div class="row">
+ <div class="col-md-8">
+        <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">
+          <b>[3] DQN for LunarLander-v0</b>: Landing pad is always at coordinates (0,0). Coordinates are the first two numbers in state vector. Reward for moving from the top of the screen to landing pad and zero speed is about 100..140 points. If lander moves away from landing pad it loses reward back. Episode finishes if the lander crashes or comes to rest, receiving additional -100 or +100 points. Each leg ground contact is +10. Firing main engine is -0.3 points each frame. Solved is 200 points. Landing outside landing pad is possible. Fuel is infinite, so an agent can learn to fly and then land on its first attempt. Four discrete actions available: do nothing, fire left orientation engine, fire main engine, fire right orientation engine. 
+          </p>
+          <p>
+          <a href="https://github.com/nav74neet/rl_gym/blob/master/lunarlander/lunarlander_dqn.py" class="md-link btn-default btn rbtn">Code</a>
+        </p>
+ </div>
+
+  <div class="col-md-4">
+    <a class ="image-popup" href="https://nav74neet.github.io/media/blog/openaigym/LunarLander.gif" title="ll">
+    <img src="https://nav74neet.github.io/media/blog/openaigym/LunarLander.gif" alt="ll">
+    </a>
+  </div>
+  
+</div>
+
+
 ---
 
 ## Imitation learning techniques.
