--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -9,6 +9,15 @@ tags: reinforcement learning, ddpg, bipedal walking,
 
 ---
 
+<p>
+<div class="image-wrapper">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/walking.png" title="walking">
+                    <img src="https://nav74neet.github.io/media/blog/walking.png" alt="walking" align="middle">
+                </a>
+</div>
+</p>
+<br>
+
 ## Intro  
 <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">Walking is a very basic and indispensable action that is embedded in our daily life. We need to walk to traverse from one place to another. Although it seems to be obvious and too simple, its importance and the level of complexity is taken for granted quite often.</p>
 <p style="text-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">But the same cannot be said in the case of a walking robot. There are lots of physical constraints associated with the model and the environment the robot interacts with. This requires complex levels of control theory and accurate mathematical computations. But there's an alternative solution to the problem of bipedal walking robot - Reinforcement Learning.</p>
