--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -13,6 +13,11 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <div class="image-wrapper">
                 <a class ="image-popup" href="https://nav74neet.github.io/media/blog/walking.png" title="walking">
                     <img src="https://nav74neet.github.io/media/blog/walking.png" alt="walking" align="middle">
+                    <center>
+                <p class="image-caption" style="font-size:10px; text-align:center;">
+                    Courtesy: <a href="https://eng.uber.com/deep-neuroevolution/" class="md-link">Uber Engineering</a>.
+                </p>
+                </center>
                 </a>
 </div>
 </p>
