--- a/_posts/2018-06-12-ddpg.md
+++ b/_posts/2018-06-12-ddpg.md
@@ -62,8 +62,8 @@ tags: reinforcement learning, ddpg, bipedal walking,
 </p>
 <center>
             <div class="image-wrapper">
-                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/rl.jpg" title="RL">
-                    <img src="https://nav74neet.github.io/media/blog/rl.jpg" alt="RL" align="middle">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/rl.png" title="RL">
+                    <img src="https://nav74neet.github.io/media/blog/rl.png" alt="RL" align="middle">
                 </a>
                 <center>
                 <p class="image-caption" style="font-size:10px; text-align:center;">
@@ -78,12 +78,12 @@ tags: reinforcement learning, ddpg, bipedal walking,
 <p style="txt-align:justify; font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;">In 2016, researchers from Google DeepMind, London, published their results related to "<b><a href="https://arxiv.org/pdf/1509.02971.pdf" class="md-link">Continuos Control with Deep Reinforcement Learning</a></b>" in ICLR. The learning framework is based on the <b>actor-critic network</b></p> 
 <center>
             <div class="image-wrapper">
-                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/ac.png" title="ac">
-                    <img src="https://nav74neet.github.io/media/blog/ac.png" alt="ac" align="middle">
+                <a class ="image-popup" href="https://nav74neet.github.io/media/blog/ac_network.jpg" title="ac">
+                    <img src="https://nav74neet.github.io/media/blog/ac_network.jpg" alt="ac" align="middle">
                 </a>
                 <center>
                 <p class="image-caption" style="font-size:10px; text-align:center;">
-                    Fig.4 Actor-Critic network.[image source <a href="https://www.mdpi.com/2227-9717/5/3/46/htm" class="md-link">here</a>]
+                    Fig.4 Actor-Critic network.
                 </p>
                 </center>
             </div>
